--- a/project_final/project.ipynb
+++ b/project_final/project.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "5                WFP  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "74\n"
+      "['AFN', 'DZD', 'AMD', 'AZN', 'BDT', 'XOF', 'BTN', 'BOB', 'XOF', 'BIF', 'KHR', 'XAF', 'CVE', 'XAF', 'XAF', 'COP', 'XAF', 'USD', 'XOF', 'CDF', 'DJF', 'USD', 'ETB', 'GMD', 'GEL', 'GHS', 'GTQ', 'XOF', 'GNF', 'HTG', 'USD', 'INR', 'IDR', 'IRR', 'IQD', 'JOD', 'KES', 'KGS', 'LAK', 'LBP', 'LSL', 'LRD', 'MGA', 'MWK', 'XOF', 'MRO', 'MZN', 'MMK', 'NPR', 'XOF', 'NGN', 'PKR', 'USD', 'PEN', 'PHP', 'RWF', 'XOF', 'SOS', 'LKR', 'SZL', 'SYP', 'TJS', 'USD', 'TRY', 'UGX', 'UAH', 'TZS', 'YER', 'ZMW', 'USD', 'NIS', 'SDG', 'EGP', 'SSP']\n"
      ]
     }
    ],
@@ -243,24 +243,216 @@
     "l=[]\n",
     "for i in unique_coun:\n",
     "    l.append(data.cur_name[(data.loc[data['adm0_name']==i].index[0])])\n",
-    "print(len(l))"
+    "print(l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Afghanistan', 'AFN'),\n",
+       " ('Algeria', 'DZD'),\n",
+       " ('Armenia', 'AMD'),\n",
+       " ('Azerbaijan', 'AZN'),\n",
+       " ('Bangladesh', 'BDT'),\n",
+       " ('Benin', 'XOF'),\n",
+       " ('Bhutan', 'BTN'),\n",
+       " ('Bolivia', 'BOB'),\n",
+       " ('Burkina Faso', 'XOF'),\n",
+       " ('Burundi', 'BIF'),\n",
+       " ('Cambodia', 'KHR'),\n",
+       " ('Cameroon', 'XAF'),\n",
+       " ('Cape Verde', 'CVE'),\n",
+       " ('Central African Republic', 'XAF'),\n",
+       " ('Chad', 'XAF'),\n",
+       " ('Colombia', 'COP'),\n",
+       " ('Congo', 'XAF'),\n",
+       " ('Costa Rica', 'USD'),\n",
+       " (\"Cote d'Ivoire\", 'XOF'),\n",
+       " ('Democratic Republic of the Congo', 'CDF'),\n",
+       " ('Djibouti', 'DJF'),\n",
+       " ('El Salvador', 'USD'),\n",
+       " ('Ethiopia', 'ETB'),\n",
+       " ('Gambia', 'GMD'),\n",
+       " ('Georgia', 'GEL'),\n",
+       " ('Ghana', 'GHS'),\n",
+       " ('Guatemala', 'GTQ'),\n",
+       " ('Guinea-Bissau', 'XOF'),\n",
+       " ('Guinea', 'GNF'),\n",
+       " ('Haiti', 'HTG'),\n",
+       " ('Honduras', 'USD'),\n",
+       " ('India', 'INR'),\n",
+       " ('Indonesia', 'IDR'),\n",
+       " ('Iran  (Islamic Republic of)', 'IRR'),\n",
+       " ('Iraq', 'IQD'),\n",
+       " ('Jordan', 'JOD'),\n",
+       " ('Kenya', 'KES'),\n",
+       " ('Kyrgyzstan', 'KGS'),\n",
+       " (\"Lao People's Democratic Republic\", 'LAK'),\n",
+       " ('Lebanon', 'LBP'),\n",
+       " ('Lesotho', 'LSL'),\n",
+       " ('Liberia', 'LRD'),\n",
+       " ('Madagascar', 'MGA'),\n",
+       " ('Malawi', 'MWK'),\n",
+       " ('Mali', 'XOF'),\n",
+       " ('Mauritania', 'MRO'),\n",
+       " ('Mozambique', 'MZN'),\n",
+       " ('Myanmar', 'MMK'),\n",
+       " ('Nepal', 'NPR'),\n",
+       " ('Niger', 'XOF'),\n",
+       " ('Nigeria', 'NGN'),\n",
+       " ('Pakistan', 'PKR'),\n",
+       " ('Panama', 'USD'),\n",
+       " ('Peru', 'PEN'),\n",
+       " ('Philippines', 'PHP'),\n",
+       " ('Rwanda', 'RWF'),\n",
+       " ('Senegal', 'XOF'),\n",
+       " ('Somalia', 'SOS'),\n",
+       " ('Sri Lanka', 'LKR'),\n",
+       " ('Swaziland', 'SZL'),\n",
+       " ('Syrian Arab Republic', 'SYP'),\n",
+       " ('Tajikistan', 'TJS'),\n",
+       " ('Timor-Leste', 'USD'),\n",
+       " ('Turkey', 'TRY'),\n",
+       " ('Uganda', 'UGX'),\n",
+       " ('Ukraine', 'UAH'),\n",
+       " ('United Republic of Tanzania', 'TZS'),\n",
+       " ('Yemen', 'YER'),\n",
+       " ('Zambia', 'ZMW'),\n",
+       " ('Zimbabwe', 'USD'),\n",
+       " ('State of Palestine', 'NIS'),\n",
+       " ('Sudan', 'SDG'),\n",
+       " ('Egypt', 'EGP'),\n",
+       " ('South Sudan', 'SSP')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#country name and currency\n",
-    "k=list(zip(m,l))\n"
+    "Coun_type=list(zip(unique_coun,l))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AED': 0.05736217,\n",
+       " 'AMD': 7.47212244,\n",
+       " 'ANG': 0.02783851,\n",
+       " 'AOA': 2.57840075,\n",
+       " 'ARS': 0.26849914,\n",
+       " 'AUD': 0.01969283,\n",
+       " 'BBD': 0.03123536,\n",
+       " 'BDT': 1.26565672,\n",
+       " 'BGN': 0.02587006,\n",
+       " 'BHD': 0.00588318,\n",
+       " 'BRL': 0.04919049,\n",
+       " 'BSD': 0.01561768,\n",
+       " 'BWP': 0.15912385,\n",
+       " 'BYN': 0.02895088,\n",
+       " 'CAD': 0.01950578,\n",
+       " 'CHF': 0.01499494,\n",
+       " 'CLP': 9.90348274,\n",
+       " 'CNY': 0.10387447,\n",
+       " 'COP': 45.63173512,\n",
+       " 'CZK': 0.34303125,\n",
+       " 'DKK': 0.09781703,\n",
+       " 'DOP': 0.73246916,\n",
+       " 'EEK': 0.20337971,\n",
+       " 'EGP': 0.27487115,\n",
+       " 'ETB': 0.36076839,\n",
+       " 'EUR': 0.01315123,\n",
+       " 'FJD': 0.03174293,\n",
+       " 'GBP': 0.01214646,\n",
+       " 'GHS': 0.06877245,\n",
+       " 'GTQ': 0.11365766,\n",
+       " 'HKD': 0.12213465,\n",
+       " 'HNL': 0.36423551,\n",
+       " 'HRK': 0.09716966,\n",
+       " 'HUF': 3.98034581,\n",
+       " 'IDR': 208.41517645,\n",
+       " 'ILS': 0.05601632,\n",
+       " 'INR': 1,\n",
+       " 'IQD': 18.21021396,\n",
+       " 'IRR': 516.55473997,\n",
+       " 'ISK': 1.63829455,\n",
+       " 'JMD': 1.98875527,\n",
+       " 'JOD': 0.01104638,\n",
+       " 'JPY': 1.71072545,\n",
+       " 'KES': 1.60830861,\n",
+       " 'KHR': 63.65609714,\n",
+       " 'KRW': 17.52023001,\n",
+       " 'KWD': 0.00470873,\n",
+       " 'KZT': 5.20787131,\n",
+       " 'LAK': 129.32531938,\n",
+       " 'LBP': 23.51397782,\n",
+       " 'LKR': 2.38794315,\n",
+       " 'LTL': 0.04668016,\n",
+       " 'LVL': 0.00950078,\n",
+       " 'MAD': 0.14682961,\n",
+       " 'MKD': 0.8061846,\n",
+       " 'MMK': 21.20880837,\n",
+       " 'MUR': 0.51538341,\n",
+       " 'MXN': 0.2753476,\n",
+       " 'MYR': 0.06672512,\n",
+       " 'NAD': 0.20349836,\n",
+       " 'NGN': 5.70045291,\n",
+       " 'NOK': 0.12149191,\n",
+       " 'NZD': 0.02159863,\n",
+       " 'OMR': 0.00600344,\n",
+       " 'PAB': 0.01561768,\n",
+       " 'PEN': 0.05049664,\n",
+       " 'PGK': 0.05128846,\n",
+       " 'PHP': 0.79786258,\n",
+       " 'PKR': 1.64297985,\n",
+       " 'PLN': 0.0560321,\n",
+       " 'PYG': 87.95876933,\n",
+       " 'QAR': 0.0570998,\n",
+       " 'RON': 0.06014897,\n",
+       " 'RSD': 1.57431673,\n",
+       " 'RUB': 0.91868168,\n",
+       " 'SAR': 0.05856474,\n",
+       " 'SCR': 0.21144776,\n",
+       " 'SEK': 0.12530576,\n",
+       " 'SGD': 0.02119283,\n",
+       " 'THB': 0.51946776,\n",
+       " 'TJS': 0.13733094,\n",
+       " 'TND': 0.03801343,\n",
+       " 'TRY': 0.05403603,\n",
+       " 'TTD': 0.105474,\n",
+       " 'TWD': 0.46992035,\n",
+       " 'TZS': 34.84304232,\n",
+       " 'UAH': 0.39856317,\n",
+       " 'USD': 0.01561866,\n",
+       " 'UYU': 0.44932063,\n",
+       " 'UZS': 65.04763392,\n",
+       " 'VEF': 0.15578635,\n",
+       " 'VND': 355.00546619,\n",
+       " 'XAF': 8.58222708,\n",
+       " 'XCD': 0.04216773,\n",
+       " 'XOF': 8.545057,\n",
+       " 'XPF': 1.5753553,\n",
+       " 'ZAR': 0.2044895,\n",
+       " 'ZMW': 0.14040294}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#api for rates\n",
     "import requests\n",
@@ -272,60 +464,119 @@
     "response = requests.get(url)\n",
     "JSON = response.json()\n",
     "\n",
-    "rates=JSON['rates']"
+    "rates=JSON['rates']\n",
+    "rates\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "india=data[data['adm0_name'].str.contains(\"India\")]\n",
+    "v=india.cm_name.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Afghanistan': nan, 'Algeria': 73.075000000000003, 'Armenia': 200.16806722689077, 'Azerbaijan': 0.43896551724137928, 'Bangladesh': nan, 'Benin': nan, 'Bhutan': nan, 'Bolivia': nan, 'Burkina Faso': nan, 'Burundi': nan, 'Cambodia': nan, 'Cameroon': nan, 'Cape Verde': nan, 'Central African Republic': nan, 'Chad': nan, 'Colombia': nan, 'Congo': nan, 'Costa Rica': nan, \"Cote d'Ivoire\": nan, 'Democratic Republic of the Congo': nan, 'Djibouti': nan, 'El Salvador': nan, 'Ethiopia': nan, 'Gambia': nan, 'Georgia': nan, 'Ghana': nan, 'Guatemala': 6.211785714285714, 'Guinea-Bissau': nan, 'Guinea': 8418.1034482758623, 'Haiti': nan, 'Honduras': nan, 'India': 17.99968133535657, 'Indonesia': nan, 'Iran  (Islamic Republic of)': nan, 'Iraq': nan, 'Jordan': 0.75951685393258439, 'Kenya': nan, 'Kyrgyzstan': 18.654134552529154, \"Lao People's Democratic Republic\": nan, 'Lebanon': nan, 'Lesotho': nan, 'Liberia': nan, 'Madagascar': nan, 'Malawi': nan, 'Mali': nan, 'Mauritania': nan, 'Mozambique': nan, 'Myanmar': 512.98445408560281, 'Nepal': nan, 'Niger': nan, 'Nigeria': nan, 'Pakistan': nan, 'Panama': nan, 'Peru': 1.3630158730158732, 'Philippines': nan, 'Rwanda': nan, 'Senegal': nan, 'Somalia': nan, 'Sri Lanka': nan, 'Swaziland': nan, 'Syrian Arab Republic': nan, 'Tajikistan': 1.7086490153172857, 'Timor-Leste': nan, 'Turkey': 1.2581818181818181, 'Uganda': nan, 'Ukraine': 5.2103693798449635, 'United Republic of Tanzania': nan, 'Yemen': 249.88458694690266, 'Zambia': nan, 'Zimbabwe': nan, 'State of Palestine': nan, 'Sudan': nan, 'Egypt': 3.5810181818181812, 'South Sudan': nan}\n"
+      "{'Afghanistan': 18.125114572864344, 'Ethiopia': 6.992861264822138, 'Guinea-Bissau': 449.08783783783781, 'India': 16.485024297119061, 'Indonesia': 7256.4500285714284, 'Kyrgyzstan': 21.155199787007412, 'Mauritania': 139.59272067307685, 'Nepal': 30.220590814196207, 'Pakistan': 35.171940119760485, 'Rwanda': 396.2915438622756, 'Tajikistan': 1.5424210164835155, 'Yemen': 135.19684333333333, 'Zimbabwe': 0.51081632653061237, 'Sudan': 3.0345539047619048}\n"
      ]
     }
    ],
    "source": [
     "from functools import reduce\n",
+    "from math import isnan\n",
     "y=data.loc[data['pt_name']=='Retail'].index.values\n",
-    "z=data.loc[data['cm_name']=='Potatoes'].index.values\n",
+    "z=data.loc[data['cm_name']=='Wheat'].index.values\n",
     "l={}\n",
     "for i in unique_coun:\n",
     "    x=data.loc[data['adm0_name']==i].index.values\n",
     "    result=reduce(set.intersection, map(set, [x,y,z]))\n",
     "    avg=((data.loc[result, ['mp_price']].sum())/len(result)).values\n",
     "    l[i]=avg[0]\n",
-    "print(l)    \n",
+    "\n",
+    "clean_dict = {k: l[k] for k in l if not isnan(l[k])}  \n",
+    "print(clean_dict)    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['Rice', 'Wheat flour', 'Lentils (masur)', 'Potatoes', 'Sugar',\n",
-       "       'Lentils', 'Tomatoes', 'Onions', 'Tea (black)', 'Oil (mustard)',\n",
-       "       'Oil (soybean)', 'Lentils (moong)', 'Sugar (jaggery/gur)',\n",
-       "       'Lentils (urad)', 'Ghee (vanaspati)', 'Salt (iodised)',\n",
-       "       'Milk (pasteurized)', 'Oil (palm)', 'Wheat', 'Oil (sunflower)',\n",
-       "       'Oil (groundnut)'], dtype=object)"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AFN': 18.125114572864344, 'ETB': 6.992861264822138, 'XOF': 449.08783783783781, 'INR': 16.485024297119061, 'IDR': 7256.4500285714284, 'KGS': 21.155199787007412, 'MRO': 139.59272067307685, 'NPR': 30.220590814196207, 'PKR': 35.171940119760485, 'RWF': 396.2915438622756, 'TJS': 1.5424210164835155, 'YER': 135.19684333333333, 'USD': 0.51081632653061237, 'SDG': 3.0345539047619048}\n"
+     ]
     }
    ],
    "source": [
-    "india=data[data['adm0_name'].str.contains(\"India\")]\n",
-    "india.cm_name.unique()\n"
+    "#count anf average retail rate to be multiplied by\n",
+    "coun_fact={}\n",
+    "for x,y in Coun_type:\n",
+    "    for key,value in clean_dict.items():\n",
+    "        if x==key:\n",
+    "            coun_fact[y]=value\n",
+    "print(coun_fact)            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Armenia': 7.47212244, 'Bangladesh': 1.26565672, 'Benin': 8.545057, 'Burkina Faso': 8.545057, 'Cambodia': 63.65609714, 'Cameroon': 8.58222708, 'Central African Republic': 8.58222708, 'Chad': 8.58222708, 'Colombia': 45.63173512, 'Congo': 8.58222708, 'Costa Rica': 0.01561866, \"Cote d'Ivoire\": 8.545057, 'El Salvador': 0.01561866, 'Ethiopia': 0.36076839, 'Ghana': 0.06877245, 'Guatemala': 0.11365766, 'Guinea-Bissau': 8.545057, 'Honduras': 0.01561866, 'India': 1, 'Indonesia': 208.41517645, 'Iran  (Islamic Republic of)': 516.55473997, 'Iraq': 18.21021396, 'Jordan': 0.01104638, 'Kenya': 1.60830861, \"Lao People's Democratic Republic\": 129.32531938, 'Lebanon': 23.51397782, 'Mali': 8.545057, 'Myanmar': 21.20880837, 'Niger': 8.545057, 'Nigeria': 5.70045291, 'Pakistan': 1.64297985, 'Panama': 0.01561866, 'Peru': 0.05049664, 'Philippines': 0.79786258, 'Senegal': 8.545057, 'Sri Lanka': 2.38794315, 'Tajikistan': 0.13733094, 'Timor-Leste': 0.01561866, 'Turkey': 0.05403603, 'Ukraine': 0.39856317, 'United Republic of Tanzania': 34.84304232, 'Zambia': 0.14040294, 'Zimbabwe': 0.01561866, 'Egypt': 0.27487115}\n"
+     ]
+    }
+   ],
+   "source": [
+    "Coun_name_avg={}\n",
+    "for x,y in Coun_type:\n",
+    "    for k,v in rates.items():\n",
+    "        if y==k:\n",
+    "            Coun_name_avg[x]=v\n",
+    "print(Coun_name_avg)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'INR': 16.485024297119061, 'ETB': 19.38324270821548, 'IDR': 34.817282273646192, 'PKR': 21.407408082187061, 'TJS': 11.231416725783101, 'USD': 32.70551548792357, 'XOF': 52.555277025985646}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#cost coverted to INR\n",
+    "cost_inr={}\n",
+    "for h,j in rates.items():\n",
+    "    for key,value in coun_fact.items():\n",
+    "        if h==key:\n",
+    "            cost_inr[h]=value/j\n",
+    "print(cost_inr)\n"
    ]
   },
   {
